Added payout_scheme to existing pools

--- a/pools.cfg
+++ b/pools.cfg
@@ -3,7 +3,9 @@
 #  No need to change anything in here!
 #  User info + API keys go in user.cfg
 #######################################
-
+# payout schemes: prop, pps, smpps,
+#          pplns, score, dgm, 
+######################################
 [slush]
 coin:btc
 name: Bitcoin.cz (MergeM-Score)
@@ -28,6 +30,7 @@ api_method: re_rate
 api_key: [rate:&nbsp;]+([0-9]+)+&nbsp;Gh/s
 api_strip: ''
 url: https://deepbit.net/stats
+payout_scheme: prop
 
 [swepool]
 coin:btc
@@ -40,6 +43,7 @@ api_key_hashrate: pool_speed
 api_key_duration: round_time
 api_key_duration_sec: (\d+)
 url: http://swepool.net/profile
+payout_scheme: prop
 
 [ozco]
 coin:btc
@@ -51,6 +55,8 @@ api_key: pool,round_shares
 api_key_mhashrate: pool,hashrate_raw
 api_key_duration_day_hour_min: (\d+)d (\d+)h (\d+)m
 url: https://ozco.in/blocks.php
+payout_scheme: dgm
+payout_merged_mining: true
 
 [polmine]
 coin:btc
@@ -61,6 +67,7 @@ api_method: re_rateduration
 api_key_ghashrate: <b> ([\.0-9]+)</b> Ghash
 api_key_duration_day_hour_min: </b> <br/>([ 0-9]+)dni([ 0-9]+)godzin([ 0-9]+)minut
 url: https://polmine.pl/?action=dashboardstat
+payout_scheme: pps
 
 [oldpolmine]
 coin:btc
@@ -71,6 +78,7 @@ api_method: re
 api_key: poprawnych wszystkich: &nbsp; </b> <br/>([ 0-9]+)<br/>
 api_strip: ' '
 url: https://polmine.pl/?action=dashboardstat
+payout_scheme: pps
 
 [mtred]
 coin:btc
@@ -84,6 +92,9 @@ api_method: json
 api_key: roundshares
 api_key_ghashrate: hashrate
 url: https://mtred.com/user/profile.html
+payout_scheme: pps
+payout_merged_mining: true
+
 
 [rfc]
 coin:btc
@@ -96,6 +107,7 @@ api_key_ghashrate: poolstats,hashrate
 api_key_duration: poolstats,round_time
 api_key_duration_sec: (\d+)
 url: https://www.rfcpool.com/account
+payout_scheme: pplns
 
 [btcmonkey]
 coin:btc
@@ -106,6 +118,7 @@ api_method: json
 api_key: shares_this_round
 api_key_mhashrate: pool_total_mhash
 url: https://bitcoinmonkey.com/stats.php
+payout_scheme: prop
 
 [btcworld]
 coin:btc
@@ -117,6 +130,7 @@ api_key: [Verifizierte Anteile der aktuellen Runde:]+</th><td>([,0-9]+)</td>
 api_key_ghashrate: ([,0-9.]+) Ghash/s
 api_strip: ','
 url: http://btcworld.de/dashboard
+payout_scheme: prop
 
 [triple]
 coin:btc
@@ -131,6 +145,7 @@ api_key: solved
 #api_key_ghashrate: ([0-9.]+) GH/s
 #api_strip:' '
 url: https://www.triplemining.com/account
+payout_scheme: pplns
 
 [eligius]
 coin:btc
@@ -143,6 +158,8 @@ api_key_ghashrate: ([0-9.]+) GH/s
 api_key_duration_hour_min: "instant_durationh_7">([,0-9]+)h</td><td class="ralign" id="instant_durationm_7">([,0-9]+)m
 api_strip: ','
 url: http://eligius.st/~artefact2/7/%(user)s
+payout_scheme: smpps
+payout_merged_mining: true
 
 [arsbitcoin]
 coin:btc
@@ -153,16 +170,18 @@ api_method: json
 api_key: currentroundshares
 api_key_mhashrate: hashrate
 url: https://arsbitcoin.com/my_stats.php
+payout_scheme: pps
 
 [bitp]
 coin:btc
-name: BitP.it (ESMPPS)
+name: BitP.it (SMPPS)
 mine_address: pool.bitp.it:8334
 api_address: https://pool.bitp.it/api/pool?token=%(bitp_user_apikey)s
 api_method: json
 api_key: shares
 user_api_address: https://pool.bitp.it/api/user?token=%(bitp_user_apikey)s
 url: https://pool.bitp.it/console
+payout_scheme: smpps
 
 [ninjac]
 coin:btc
@@ -173,6 +192,7 @@ api_method: re_rate
 api_key:Hashrate:([ 0-9]+).
 api_strip: ' '
 url: https://www.ninjacoin.com/account.php
+payout_scheme: pps
 
 [bitclockers]
 coin:btc
@@ -184,16 +204,18 @@ api_key: roundshares
 api_key_mhashrate: hashrate
 user_api_address: http://bitclockers.com/api/%(bitclockers_user_apikey)s
 url: http://bitclockers.com/dashboard
+payout_scheme: prop
 
 [nofeemining]
 coin:btc
-name: NoFeeMining.com (RSMPPS)
+name: NoFeeMining.com (SMPPS)
 mine_address: nofeemining.appspot.com:80
 api_address: https://nofeemining.appspot.com/api.php
 api_method: json
 api_key: poolRoundShares
 api_key_ghashrate: poolspeed
 url: https://nofeemining.appspot.com
+payout_scheme: smpps
 
 [poolmunity]
 coin:btc
@@ -204,6 +226,7 @@ api_method: json
 api_key: totalShares
 api_key_mhashrate: speed
 url: http://poolmunity.com
+payout_scheme: prop
 
 [bitparking]
 coin:btc
@@ -211,6 +234,8 @@ name: BitParking.com (MergeM-PPS)
 mine_address: mmpool.bitparking.com:15098
 api_address: http://mmpool.bitparking.com/pool
 url: http://mmpool.bitparking.com/user/%(user)s
+payout_scheme: pps
+payout_merged_mining: true
 
 [nmcbit]
 coin:nmc
@@ -222,6 +247,8 @@ api_key: Valid\s+shares\s+for\s+current\s+round:</th><td>([,0-9]+)</td>
 api_key_ghashrate: ([,0-9.]+) Ghash/s
 api_strip: ','
 url: http://nmcbit.com/dashboard
+payout_scheme: pps
+payout_merged_mining: true
 
 [x8s]
 coin:btc
@@ -231,6 +258,7 @@ api_address: http://btc.x8s.de/api/global.json
 api_method: json
 api_key: round_shares
 url: http://btc.x8s.de
+payout_scheme: prop
 
 [bclc]
 coin:btc
@@ -244,10 +272,11 @@ api_key: "hash_rate":([ 0-9]+).
 #api_key: valid_round_shares
 #api_key_hashrate: hash_rate
 url: https://www.bitcoins.lc
+payout_scheme: prop
 
 [btcg]
 coin:btc
-name: BTCGuild.com (PPS)
+name: BTCGuild.com (MergeM-PPS)
 mine_address: btcguild.com:8332
 api_method: disable
 api_address: https://www.btcguild.com
@@ -258,6 +287,8 @@ api_strip: ''
 #api_method: re
 #api_key: <span id="shares_this_round" class="header_stat">([,0-9]+)<
 url: http://www.btcguild.com/my_account.php
+payout_scheme: pps
+payout_merged_mining: true
 
 [mineco]
 coin:btc
@@ -268,6 +299,7 @@ api_method: json
 api_key: shares_this_round
 api_key_hashrate: hashrate
 url: https://mineco.in/workers
+payout_scheme: pplns
 
 [eclipsemc]
 coin:btc
@@ -277,6 +309,7 @@ api_address: https://eclipsemc.com/api.php?key=%(eclipsemc_apikey)s&action=pools
 api_method: json_ec
 api_key: round_shares
 url: https://eclipsemc.com
+payout_scheme: dgm
 
 [mmf]
 coin:btc
@@ -286,6 +319,7 @@ api_method:json
 api_key: shares_this_round
 api_address: http://mining.mainframe.nl/api
 url: http://mining.mainframe.nl
+payout_scheme: pplns
 
 [bcpool]
 coin:btc
@@ -302,6 +336,7 @@ api_key_estimate: <td width="120" align="center"><img src="btc.png" border="0" a
 #api_key_duration: round_duration
 #api_key_duration_day_hour_min: (\d+):(\d+):(\d+):
 url: http://bitcoinpool.com
+payout_scheme: prop
 
 [unitedminers]
 coin:btc
@@ -312,6 +347,7 @@ api_method: json
 api_key: validcurrentshares
 api_key_mhashrate: hashrate
 url: http://www.unitedminers.com
+payout_scheme: pplns
 
 [bmunion]
 coin:btc
@@ -321,6 +357,7 @@ api_address: http://pool.bitminersunion.org/stats.php
 api_method: re
 api_key: Shares this round:([0-9]+)<br/>
 url: http://pool.bitminersunion.org
+payout_scheme: prop
 
 [btcpool24]
 coin:btc
@@ -334,6 +371,7 @@ api_method: re
 api_key:<br/>Round Shares:([ 0-9]+)<br/><br/></span>
 api_strip: ' '
 url: http://www.btcpool24.com
+payout_scheme: prop
 
 [btcserv]
 coin:btc
@@ -348,6 +386,7 @@ api_key: shares
 #api_key: </span> ([,0-9]+) shares
 #api_strip: ","
 url: https://btcserv.net/user/round-stats/
+payout_scheme: pps
 
 [bloodys]
 coin:btc
@@ -360,6 +399,7 @@ api_key_ghashrate: ([,0-9.]+) Ghash/s
 api_key_duration_hour_min: Current Round: ([0-9]+):([0-9]+) hours
 api_strip:','
 url: http://pool.bloodys.com/?action=dashboard
+payout_scheme: prop
 
 [digbtc]
 coin:btc
@@ -371,6 +411,7 @@ api_method: json
 api_key: shares_this_round
 api_key_mhashrate: pool_total_mhash
 url: http://www.digbtc.net/main.php
+payout_scheme: prop
 
 [bithasher]
 coin:btc
@@ -383,6 +424,7 @@ api_key: Round Shares</td><td>([,0-9]+)
 api_key_ghashrate: Hash Rate</td><td>([,0-9.]+)
 api_key_duration_hour_min: Round Time</td><td>([0-9]+):([0-9]+):
 url: http://bithasher.com/index.php/account
+payout_scheme: prop
 
 [kiwipool]
 coin:btc
@@ -395,6 +437,7 @@ api_key_ghashrate: current\s+hash\s+rate\W+([0-9]+)
 api_key_duration_hour_min: ([0-9]+):([0-9]+):
 api_strip:''
 url: http://www.kiwipool.me
+payout_scheme: prop
 
 [itzod]
 coin:btc
@@ -404,6 +447,7 @@ api_address: https://pool.itzod.ru/api.php
 api_method: json
 api_key: total_shares_count
 url: http://pool.itzod.ru/index.php
+payout_scheme: smpps
 
 [btcmine]
 coin:btc
@@ -416,6 +460,8 @@ api_strip:''
 api_key_mhashrate: <td><span id="rs_hashrate">([0-9.]+)
 api_key_duration_hour_min: <td><span id="rs_roundtime">([0-9]+):([0-9]+):
 url: http://btcmine.com
+payout_scheme: score
+payout_c: 1
 
 [i0g]
 coin:i0c
@@ -426,6 +472,7 @@ api_method: re_rate
 api_key: "hash_rate":([ 0-9]+).
 api_strip: ' '
 url: http://i0.btcguild.com/my_account.php
+payout_scheme: prop
 
 [bitfarms]
 coin:btc
@@ -436,6 +483,7 @@ api_method: re_rate
 api_key: Pool Rate:([ 0-9]+).
 api_strip: ' '
 url: http://bitfarms.ca/
+payout_scheme: pps
 
 [masterpool]
 coin:btc
@@ -448,6 +496,8 @@ api_key_ghashrate: hashrate
 api_key_duration: blockchains,BTC,roundduration
 api_key_duration_sec: (\d+)
 url:https://masterpool.eu/dashboard
+payout_scheme: pplns
+payout_merged_mining: true
 
 [namebit]
 coin:nmc
@@ -458,6 +508,7 @@ api_method:re
 api_key:<td id="current_share_count">([0-9]+)</td>
 api_strip:' '
 url: http://www.namebit.org/details?username=%(user)s
+payout_scheme: prop
 
 [bitchomp]
 coin:nmc
@@ -468,6 +519,9 @@ api_method:re
 api_key: "shares": (\d+)
 api_strip:''
 url: http://www.bitchomp.info/
+payout_scheme: smpps
+payout_merged_mining: true
+
 
 [abc]
 coin:btc
@@ -478,6 +532,7 @@ api_method: re_rate
 api_key: <span class="stat">([0-9]+) GH/s</span>
 api_strip: ''
 url: http://www.abcpool.co/stats.php
+payout_scheme: pps
 
 [p2pool]
 coin:btc
@@ -487,6 +542,7 @@ api_address: http://localhost:8332
 api_method: disable
 api_key: code
 url: https://en.bitcoin.it/wiki/P2Pool
+payout_scheme: pplns
 
 [donation]
 coin:btc
@@ -516,6 +572,7 @@ api_method: re_rate
 api_key: _stat">([0-9]+).
 api_strip: ''
 url: http://sc.btcguild.com/my_account.php
+payout_scheme: prop
 
 [sodigbtc]
 coin:scc
@@ -525,6 +582,7 @@ api_address: http://sobtc.digbtc.net/papi.php
 api_method: json
 api_key: shares_this_round
 url: http://sobtc.digbtc.net/main.php
+payout_scheme: prop
 
 [scbitparking]
 coin:scc
@@ -535,6 +593,7 @@ api_method: re
 api_key: Total Pool Shares</td><td>([0-9]+)
 api_strip: ' '
 url: http://scpool.bitparking.com/user/%(user)s
+payout_scheme: prop
 
 [squid]
 coin:scc
@@ -544,6 +603,7 @@ api_address: http://pool.squidnet.org/api
 api_method: json
 api_key: shares_this_round
 url: http://pool.squidnet.org
+payout_scheme: prop
 
 [mine4us]
 coin:scc
@@ -554,6 +614,7 @@ api_method: re
 api_key: <td>Valid shares this round: </td><td>([0-9]+)</td>
 api_strip: ' '
 url: http://solid.mine-for.us/index.php?page=withdraw
+payout_scheme: prop
 
 [poolmunitynmc]
 coin:nmc
@@ -563,6 +624,7 @@ api_address: https://poolmunity.com/api.php?server
 api_method: json
 api_key: totalShares
 url: http://poolmunity.com
+payout_scheme: prop
 
 [ixparking]
 coin:ixc
@@ -573,6 +635,7 @@ api_method: re
 api_key: block</td><td>([ 0-9]+)</td>
 api_strip: ' '
 url: http://ixpool.bitparking.com/user/%(user)s
+payout_scheme: prop
 
 [i0parking]
 coin:i0c
@@ -583,6 +646,7 @@ api_method: re
 api_key: block</td><td>([ 0-9]+)</td>
 api_strip: ' '
 url: http://i0pool.bitparking.com/user/%(user)s
+payout_scheme: prop
 
 [digi0c]
 coin:i0c
@@ -592,6 +656,7 @@ api_address: http://i0.digbtc.net/papi.php
 api_method: json
 api_key: shares_this_round
 url: http://i0.digbtc.net/main.php
+payout_scheme: prop
 
 [digixc]
 coin:ixc
@@ -601,6 +666,7 @@ api_address: http://ix.digbtc.net/papi.php
 api_method: json
 api_key: shares_this_round
 url: http://ix.digbtc.net/main.php
+payout_scheme: prop
 
 [asspenny]
 coin:btc
@@ -611,6 +677,8 @@ api_method: json
 api_key: shares
 api_key_mhashrate: poolhash
 url: http://asspennypool.com
+payout_scheme: prop
+payout_merged_mining: true
 
 [guildminers]
 coin:btc
@@ -621,16 +689,18 @@ api_method: re
 api_key: ([,0-9]+) shares
 api_strip: ','
 url: https://guildminers.com/account
+payout_scheme: prop
 
 [yourbtc]
 coin:btc
-name: YourBtc.net (DGPM)
+name: YourBtc.net (DGM)
 mine_address: mining.yourbtc.net:8999
 api_address: http://www.yourbtc.net/api.php
 api_method:json
 api_key: pool,round_shares
 #api_key_ghashrate: pool,hashrate  - broken on their side
 url: http://yourbtc.net
+payout_scheme: dgm
 
 [bitpenny]
 coin:btc
@@ -643,6 +713,7 @@ re_rate_type: mhash
 api_key_duration_hour_min: time since last block: ([0-9]+):([0-9]+):
 #api_strip: '.'
 url: http://www.bitpenny.com
+payout_scheme: pps
 
 [coinotron]
 coin:btc
@@ -654,6 +725,8 @@ api_key_ghashrate: ([0-9]+(?:\.[0-9]*)?) GH</td>
 api_key_duration_hour_min:  (\d+) h ?(\d+)? ?m?
 api_strip: ''
 url: http://coinotron.com
+payout_scheme: score
+payout_c: 1
 
 [simplecoin]
 coin:btc
@@ -670,10 +743,12 @@ api_key_ghashrate: Pool Hash Rate</td><td>([.0-9]+) Ghashes/s
 api_key_duration_hour_min: Time Since Last Block</td><td><span class="green">([0-9]+) Hours ([0-9]+) Minutes
 api_strip: ','
 url: http://simplecoin.us
+payout_scheme: prop
+payout_merged_mining: true
 
 [masterpoolnmc]
 coin:nmc
-name: MasterPool.eu (MergeM-Prop NMC)
+name: MasterPool.eu (MergeM-PPLNS)
 mine_address: US01.masterpool.eu:8888
 api_address: https://masterpool.eu/jsonstats
 api_method:json
@@ -681,10 +756,12 @@ api_key: blockchains,NMC,shares
 api_key_ghashrate: hashrate
 api_key_duration: blockchains,NMC,roundduration
 url:https://masterpool.eu/dashboard
+payout_scheme: prop
+payout_merged_mining: true
 
 [mtrednmc]
 coin:nmc
-name: MtRed.com (MergeM-Prop NMC)
+name: MtRed.com (MergeM-PPS)
 mine_address: mtred.com:8337
 api_address: https://mtred.com/api/stats
 api_method: json
@@ -692,10 +769,12 @@ api_key: NMCroundshares
 api_strip:','
 api_key_ghashrate: hashrate
 url: https://mtred.com/user/profile.html
+payout_scheme: pps
+payout_merged_mining: true
 
 [nmcbitbtc]
 coin:btc
-name: NMCBit.com (MergeM-Prop BTC)
+name: NMCBit.com (MergeM-Prop)
 mine_address: nmcbit.com:8332
 api_address: http://www.nmcbit.com/statistics
 api_method: re
@@ -704,6 +783,8 @@ api_key_duration_hour_min: BTC Current round duration:</th><td>([0-9]+):([0-9]+)
 api_key_ghashrate: ([,0-9.]+) Ghash/s
 api_strip: ','
 url: http://nmcbit.com/dashboard
+payout_scheme: prop
+payout_merged_mining: true
 
 [mkalinin]
 coin:btc
@@ -714,6 +795,7 @@ api_method: json
 api_key: shares
 api_key_mhashrate: hashrate
 url: http://pool.mkalinin.ru/blocks.php
+payout_scheme: pplns
 
 [a1]
 coin:btc
@@ -724,6 +806,7 @@ api_method: re_rateduration
 api_key_ghashrate: Pool Hash Rate</td><td>([0-9.]+) Ghashes/s
 api_key_duration_hour_min: Time Since Last Block</td><td><span class="green">([0-9]+) Hours ([0-9]+) Minutes
 url: https://www.a1bitcoinpool.com/accountdetails.php
+payout_scheme: prop
 
 [alex]
 coin:btc
@@ -734,3 +817,5 @@ api_method: re_rateduration
 api_key_ghashrate: Pool Hash Rate</td><td>([0-9.]+) Ghashes/s
 api_key_duration_hour_min: Time Since Last Block</td><td><span\W+class="red">([0-9]+) Hours ([0-9]+) Minutes
 url: https://pool.schaetter.us/accountdetails.php
+payout_scheme: prop
+
