Added Alex round duration for JSON

--- a/pools.cfg
+++ b/pools.cfg
@@ -816,6 +816,7 @@ api_address: https://pool.schaetter.us/api.php
 api_method: json
 api_key: shares
 api_key_mhashrate: hashrate
+api_key_duration_sec: "roundduration":"([0-9]+)
 #api_address: http://pool.schaetter.us/stats.php
 #api_method: re_rateduration
 #api_key_ghashrate: Pool Hash Rate</td><td>([0-9.]+) Ghashes/s
