Upd bitlc url, thanks owowo

--- a/pools.cfg
+++ b/pools.cfg
@@ -264,7 +264,7 @@ payout_scheme: prop
 coin:btc
 name: Bitcoins.lc (Prop)
 mine_address: bitcoins.lc:8080    
-api_address: http://www.bitcoins.lc/stats.json
+api_address: https://www.bitlc.net/stats.json
 api_method: re_rate
 re_rate_type: None
 api_key: "hash_rate":([ 0-9]+).
