more bitlc fixes

--- a/poolblock.cfg
+++ b/poolblock.cfg
@@ -22,7 +22,7 @@ search = href="http://blockexplorer.com/tx/([0-9a-f]+)"
 mode = g
 
 [bclc]
-url = http://www.bitcoins.lc/round-information
+url = https://www.bitlc.net/round-information
 search = href="http://blockexplorer.com/b/([0-9]+)"
 
 [arsbitcoin]
