--- a/pools.cfg
+++ b/pools.cfg
@@ -262,8 +262,8 @@ payout_scheme: prop
 
 [bclc]
 coin:btc
-name: Bitcoins.lc (Prop)
-mine_address: bitcoins.lc:8080    
+name: Bitlc.net (Prop)
+mine_address: bitlc.net:8080    
 api_address: https://www.bitlc.net/stats.json
 api_method: re_rate
 re_rate_type: None
@@ -271,7 +271,7 @@ api_key: "hash_rate":([ 0-9]+).
 #api_method: json
 #api_key: valid_round_shares
 #api_key_hashrate: hash_rate
-url: https://www.bitcoins.lc
+url: https://www.bitlc.net
 payout_scheme: prop
 
 [btcg]
