fixed bclc mining address so it will stop being red

--- a/pools.cfg
+++ b/pools.cfg
@@ -236,7 +236,7 @@ payout_scheme: prop
 [bclc]
 coin:btc
 name: Bitlc.net (Prop)
-mine_address: bitlc.net:8080    
+mine_address: pool.bitlc.net:80    
 api_address: https://www.bitlc.net/stats.json
 api_method: re_rate
 re_rate_type: None
