--- a/diffwebs.cfg
+++ b/diffwebs.cfg
@@ -59,7 +59,7 @@ pattern = <td style="text-align: left;">SC</td>\r\n<td style="text-align: right;
 
 [sccsytes]
 coin = scc
-url = http://blockexplorer.sytes.net/chain/SolidCoin?count=1
+url = http://blockexplorer.sytes.net/chain/SolidCoin%201
 get_method = regexp
 pattern = <td>\d{4}-\d{2}-\d{2} \d{2}:\d{2}:\d{2}</td><td>\d{1,}</td><td>[.0-9]+</td><td>([.0-9]+)</td>
 
