Fixed round duration display for a few pools

--- a/pools.cfg
+++ b/pools.cfg
@@ -742,7 +742,7 @@ api_address: http://simplecoin.us/stats.php?pool_id=3
 api_method: re
 api_key: Current BTC Round Shares</td><td>([,0-9]+)</td>
 api_key_ghashrate: Pool Hash Rate</td><td>([.0-9]+) Ghashes/s
-api_key_duration_hour_min: Time Since Last Block</td><td><span class="green">([0-9]+) Hours ([0-9]+) Minutes
+api_key_duration_hour_min: Time Since Last Block</td><td><span class="\w+">([0-9]+) Hours ([0-9]+) Minutes
 api_strip: ','
 url: http://simplecoin.us
 payout_scheme: prop
@@ -806,7 +806,7 @@ mine_address: a1bitcoinpool.com:8999
 api_address: http://www.a1bitcoinpool.com/stats.php
 api_method: re_rateduration
 api_key_ghashrate: Pool Hash Rate</td><td>([0-9.]+) Ghashes/s
-api_key_duration_hour_min: Time Since Last Block</td><td><span class="green">([0-9]+) Hours ([0-9]+) Minutes
+api_key_duration_hour_min: Time Since Last Block</td><td><span class="\w+">([0-9]+) Hours ([0-9]+) Minutes
 url: http://www.a1bitcoinpool.com/
 payout_scheme: prop
 
@@ -822,7 +822,7 @@ api_key_duration_sec: "roundduration":"([0-9]+)
 #api_address: http://pool.schaetter.us/stats.php
 #api_method: re_rateduration
 #api_key_ghashrate: Pool Hash Rate</td><td>([0-9.]+) Ghashes/s
-#api_key_duration_hour_min: Time Since Last Block</td><td><span\W+class="red">([0-9]+) Hours ([0-9]+) Minutes
+#api_key_duration_hour_min: Time Since Last Block</td><td><span\W+class="\w+">([0-9]+) Hours ([0-9]+) Minutes
 url: https://pool.schaetter.us/accountdetails.php
 payout_scheme: prop
 
