--- a/pools.cfg
+++ b/pools.cfg
@@ -223,6 +223,17 @@ api_key: round_shares
 url: http://btc.x8s.de
 payout_scheme: prop
 
+[bitcash]
+coin:btc
+name: bitcash.cz (Prop)
+mine_address:bitcash.cz:8337
+api_address:http://bitcash.cz/pool/actual.php?s=
+api_method:re
+api_key:<td bgcolor="#fafafa" align="center"><font face="verdana, arial, helvetica" size="2" class="nf">([0-9]+(,[0-9]+)*)</font>
+api_strip:','
+url: http://bitcash.cz/pool/account.php?s=
+payout_scheme: prop
+
 [bclc]
 coin:btc
 name: Bitlc.net (Prop)
