--- a/pools.cfg
+++ b/pools.cfg
@@ -36,12 +36,12 @@ payout_scheme: prop
 coin:btc
 name: OzCo.in (MergeM-DGM)
 mine_address: us.ozco.in:8332
-api_address: https://ozco.in/api.php
+api_address: http://ozco.in/api.php
 api_method:json
 api_key: pool,round_shares
 api_key_mhashrate: pool,hashrate_raw
 api_key_duration_day_hour_min: (\d+)d (\d+)h (\d+)m
-url: https://ozco.in/blocks.php
+url: http://ozco.in/blocks.php
 payout_scheme: dgm
 payout_merged_mining: true
 
