--- a/pools.cfg
+++ b/pools.cfg
@@ -776,3 +776,13 @@ api_key_duration_sec: "roundduration":"([0-9]+)
 url: https://pool.schaetter.us/accountdetails.php
 payout_scheme: prop
 
+[btcjapan]
+coin:btc
+name: BTC Japan (Prop)
+mine_address: bitcoin.ne.jp:8334
+api_address: https://bitcoin.ne.jp/
+api_method: re
+api_key: Shares this round: ([,0-9]+)
+api_key_mhashrate: Speed: ([,0-9.]+) Mh/s
+url: https://bitcoin.ne.jp/en/my-miner-stats
+payout_scheme: prop
