Fixed Bitclockers' hashrate

--- a/pools.cfg
+++ b/pools.cfg
@@ -162,7 +162,7 @@ mine_address: pool.bitclockers.com:8332
 api_address: http://bitclockers.com/api
 api_method: json
 api_key: roundshares
-api_key_mhashrate: hashrate
+api_key_ghashrate: hashrate
 user_api_address: http://bitclockers.com/api/%(bitclockers_user_apikey)s
 url: http://bitclockers.com/dashboard
 payout_scheme: prop
