--- a/pools.cfg
+++ b/pools.cfg
@@ -230,6 +230,7 @@ mine_address:bitcash.cz:8337
 api_address:http://bitcash.cz/pool/actual.php?s=
 api_method:re
 api_key:<td bgcolor="#fafafa" align="center"><font face="verdana, arial, helvetica" size="2" class="nf">([0-9]+(,[0-9]+)*)</font>
+api_key_ghashrate:Bitcash: <b>([0-9.]+) Mhash/sec
 api_strip:','
 url: http://bitcash.cz/pool/account.php?s=
 payout_scheme: prop
