Switch bitparking to re_rate

--- a/pools.cfg
+++ b/pools.cfg
@@ -150,8 +150,8 @@ coin:btc
 name: BitParking.com (MergeM-PPS)
 mine_address: mmpool.bitparking.com:15098
 api_address: http://mmpool.bitparking.com/pool
-api_method: re
-api_key_mhashrate: Pool Hash rate [(]MHash[/]second[)]</td><td>([0-9]+)
+api_method: re_rate
+api_key: Pool Hash rate [(]MHash[/]second[)]</td><td>([0-9]+)
 url: http://mmpool.bitparking.com/user/%(user)s
 payout_scheme: pps
 payout_merged_mining: true
