Fixed non regular bitpenny api setup

--- a/pools.cfg
+++ b/pools.cfg
@@ -420,8 +420,7 @@ name: BitPenny (PPS)
 mine_address: bitpenny.dyndns.biz:8338
 api_address: http://www.bitpenny.com
 api_method: re_rateduration
-api_key: ([0-9]+).[0-9]+ Mh/s &nbsp
-re_rate_type: mhash
+api_key_mhashrate: ([0-9]+).[0-9]+ Mh/s &nbsp
 api_key_duration_hour_min: time since last block: ([0-9]+):([0-9]+):
 #api_strip: '.'
 url: http://www.bitpenny.com
