--- a/pools.cfg
+++ b/pools.cfg
@@ -534,3 +534,11 @@ api_key: Shares this round: ([,0-9]+)
 api_key_mhashrate: Speed: ([,0-9.]+) Mh/s
 url: https://bitcoin.ne.jp/en/my-miner-stats
 payout_scheme: prop
+
+[gpumax]
+coin:btc
+name: GPUmax (PPS)
+mine_address: gpumax.com:8332
+url: https://gpumax.com/workers#!%(user)s
+payout_scheme: pps
+
