Added hash rate display for btcpool124

--- a/pools.cfg
+++ b/pools.cfg
@@ -248,6 +248,7 @@ mine_address: min.btcpool24.com:8338
 api_address: http://www.btcpool24.com/stat.php
 api_method: re
 api_key:<br/>Round Shares:([ 0-9]+)<br/><br/></span>
+api_key_mhashrate: Current Pool Rate : ([,0-9]+) MH/s
 api_strip: ' '
 url: http://www.btcpool24.com
 payout_scheme: prop
