GPUmax: Disabled api_method...

--- a/pools.cfg
+++ b/pools.cfg
@@ -540,6 +540,8 @@ payout_scheme: prop
 coin:btc
 name: GPUmax (PPS)
 mine_address: gpumax.com:8332
+api_method: disable
+api_key: code
 url: https://gpumax.com/workers#!%(user)s
 payout_scheme: pps
 
