Added 50, Max, Warp and BitMinter

--- a/pools.cfg
+++ b/pools.cfg
@@ -509,7 +509,6 @@ api_key_mhashrate: hashrate
 url: http://pool.mkalinin.ru/blocks.php
 payout_scheme: pplns
 
-
 [btcjapan]
 coin:btc
 name: BTC Japan (Prop)
@@ -530,3 +529,46 @@ api_key: code
 url: https://gpumax.com/workers#!%(user)s
 payout_scheme: pps
 
+[fiftybtc]
+coin:btc
+name: 50btc.com (PPS)
+mine_address: 50btc.com:8332
+api_address: https://50btc.com/
+api_method: re_rate
+api_key: <span>([0-9.]+) Gh/sec
+url: https://50btc.com/account
+payout_scheme: pps
+
+[btcwarp]
+coin:btc
+name: BTCWARP.com (PPLNS)
+mine_address: 64.120.173.148:8999 
+api_address: http://www.btcwarp.com/api
+api_method: json
+api_key: shares_this_round
+api_key_mhashrate: hashrate
+url: http://www.btcwarp.com/accountworkers
+payout_scheme: pplns
+
+[maxbtc]
+coin:btc
+name: MaxBTC (DGM)
+mine_address: pool.maxbtc.com:8332
+api_address: https://www.maxbtc.com/statistics/pool
+api_method: re
+api_key: Shares</td>\W+<td class="dots">&nbsp;</td>\W+<td>\W+([,0-9]+)
+api_key_mhashrate: <td>([,0-9.]+) MH/s
+api_key_duration_hour_min: (\d+):(\d+):
+url: https://www.maxbtc.com/account/home?sp=workers
+payout_scheme: dgm
+
+[bitminter]
+coin:btc
+name: BitMinter.com (MergeM-PPLNS)
+mine_address: mint.bitminter.com:8332
+api_address: http://bitminter.com/api/pool/round
+api_method: json
+api_key: chains,BTC,accepted
+api_key_ghashrate: hash_rate
+url: https://bitminter.com/members/
+payout_scheme: pplns
