Fixed Bitparking hash rate display

--- a/pools.cfg
+++ b/pools.cfg
@@ -151,7 +151,9 @@ name: BitParking.com (MergeM-PPS)
 mine_address: mmpool.bitparking.com:15098
 api_address: http://mmpool.bitparking.com/pool
 api_method: re_rate
+re_rate_type: MH
 api_key: Pool Hash rate [(]MHash[/]second[)]</td><td>([0-9]+)
+api_strip: ''
 url: http://mmpool.bitparking.com/user/%(user)s
 payout_scheme: pps
 payout_merged_mining: true
