Cleaned up old pools, updated Bitlc.net's url

--- a/poolblock.cfg
+++ b/poolblock.cfg
@@ -7,9 +7,9 @@
 # type = mmf/btcmp are special parsers for those pools, see poolblocks.py for more information
 
 [btcg]
-url = https://www.btcguild.com/blocks.php
-search = href="http://blockexplorer.com/b/([0-9]+)"
-mode = b
+url = https://www.btcguild.com/block_list.php
+search = href="http://www.blockchain.info/tx-index/([0-9a-f]+)"
+mode = g
 
 [deepbit]
 url = http://deepbit.net/stats
@@ -17,37 +17,25 @@ search = http://blockexplorer.com/block/(.+)'>[0-9\.]+&nbsp
 mode = h
 
 [mtred]
-url = https://mtred.com/blocks.html
+url = https://mtred.com/blocks/index/chain/1.html
 search = href="http://blockexplorer.com/tx/([0-9a-f]+)"
 mode = g
 
 [bclc]
-url = https://www.bitlc.net/round-information
+url = https://www.bitlc.net/statistics/rounds
 search = href="http://blockexplorer.com/b/([0-9]+)"
 
 [arsbitcoin]
 url = https://arsbitcoin.com/blocks.php
 search = href="http://blockexplorer.com/b/([0-9]+)"
 
-[bitp]
-url = https://pool.bitp.it/rounds
-search = http://.*.com/b/([0-9]+)"
-
 [triple]
 url = https://www.triplemining.com/stats
-search = href="http://blockexplorer.com/b/([0-9]+)"
-
-[nofee]
-url = http://nofeemining.appspot.com/
 search = href="http://blockexplorer.com/b/([0-9]+)"
 
 [btcmine]
 url = http://btcmine.com/stats/
 search = "(?:even|odd)">[ \n\r]+<td>[0-9]+</td>[ \n\r]+<td>([0-9]+)</td>
-
-[rfc]
-url = https://rfcpool.com/stats
-search = blockexplorer.com/b/([0-9]+)
 
 [slush]
 url = http://mining.bitcoin.cz/stats/
@@ -57,11 +45,6 @@ mode = h
 [eligius]
 url = http://eligius.st/~artefact2/
 search = title="([0-9a-fA-F]{64})"
-mode = h
-
-[mineco]
-url = https://mineco.in/blocks
-search = href="http://blockexplorer.com/block/([0-9a-f]{64})"
 mode = h
 
 [polmine]
@@ -77,15 +60,6 @@ mode = g
 [bcpool]
 url = http://bitcoinpool.com/index.php?do=blocks
 search = do=blockdetails&id=([0-9]+)
-mode = b
-
-[mmf]
-auth_url = http://mining.mainframe.nl/login
-url = http://mining.mainframe.nl/blocksAuth
-search = href="http://blockexplorer.com/b/([0-9]+)"
-type = mmf
-user = fruitcup
-pass = AspErjNfde2
 mode = b
 
 [btcmp]
@@ -115,11 +89,6 @@ url = http://pool.bloodys.com/?action=statistics
 search = href="http://blockexplorer.com/tx/([0-9a-f]+)"
 mode = g
 
-[yourbtc]
-url = http://www.yourbtc.net/content/overview-bitcoin
-search = href="http://blockexplorer.com/tx/([0-9a-f]+)"
-mode = g
-
 [mkalinin]
 url = http://pool.mkalinin.ru/blocks.php
 search = href="http://blockexplorer.com/b/([0-9]+)"
@@ -133,4 +102,3 @@ mode = b
 url = http://simplecoin.us/blocks.php
 search = href="http://blockexplorer.com/b/([0-9]+)"
 mode = b
-
