Updated Coinotron's payout system

--- a/pools.cfg
+++ b/pools.cfg
@@ -343,7 +343,6 @@ api_strip:' '
 url: http://www.namebit.org/details?username=%(user)s
 payout_scheme: prop
 
-
 [abc]
 coin:btc
 name: ABCPool.co (PPS)
@@ -431,7 +430,7 @@ payout_scheme: pps
 
 [coinotron]
 coin:btc
-name: Coinotron.com (Score)
+name: Coinotron.com (DGM)
 mine_address: coinotron.com:8322
 api_address: http://coinotron.com/coinotron/AccountServlet?action=home
 api_method: re_rateduration
