Few more updates and corrections

--- a/poolblock.cfg
+++ b/poolblock.cfg
@@ -49,9 +49,9 @@ search = href="/block-index/[0-9]+/([0-9a-f]+)"
 mode = h
 
 [polmine]
-url = http://polmine.pl/?action=statistics
-search = href='http://blockexplorer.com/tx/([0-9a-f]+)'
-mode = g
+url = http://blockchain.info/blocks/Polmine
+search = href="/block-index/[0-9]+/([0-9a-f]+)"
+mode = h
 
 [itzod]
 url = http://pool.itzod.ru/blocks.php
@@ -80,8 +80,9 @@ search = href="http://blockexplorer.com/tx/([0-9a-f]+)"
 mode = g
 
 [ozco]
-url = http://ozco.in/content/previous-bitcoin-rounds
-search = href="http://blockexplorer.com/tx/">([0-9]+)
+url = http://blockchain.info/blocks/OzCoin
+search = href="/block-index/[0-9]+/([0-9a-f]+)"
+mode = h
 
 [bloodys]
 url = http://pool.bloodys.com/?action=statistics
@@ -133,3 +134,11 @@ search = pronadeni blok</td><td><a href="http://blockexplorer.com/b/([0-9]+)"
 url = http://blockchain.info/blocks/Donate@Home
 search = href="/block-index/[0-9]+/([0-9a-f]+)"
 mode = h
+
+[asspenny]
+url = http://asspennypool.com/blocks.php
+search = href="http://blockexplorer.com/b/([0-9]+)"
+
+[simplecoin]
+url = http://simplecoin.us/blocks.php
+search = href="http://blockexplorer.com/b/([0-9]+)"
