--- a/poolblock.cfg
+++ b/poolblock.cfg
@@ -7,9 +7,9 @@
 # type = mmf/btcmp are special parsers for those pools, see poolblocks.py for more information
 
 [btcg]
-url = https://www.btcguild.com/block_list.php
-search =  href="http://www.blockchain.info/tx-index/([0-9a-f]+)"
-mode = g
+url = http://blockchain.info/blocks/BTC%20Guild
+search = href="/block-index/[0-9]+/([0-9a-f]+)"
+mode = h
 
 [deepbit]
 url = http://blockchain.info/blocks/Deepbit
