--- a/pools.cfg
+++ b/pools.cfg
@@ -573,3 +573,12 @@ api_key: chains,BTC,accepted
 api_key_ghashrate: hash_rate
 url: https://bitminter.com/members/
 payout_scheme: pplns
+
+[project2]
+coin:btc
+name: Project 2 (PPS)
+mine_address: 216.231.138.132:9332
+api_method: disable
+api_key: code
+url: http://project2.tygrr.com
+payout_scheme: pps
