--- a/poolblock.cfg
+++ b/poolblock.cfg
@@ -45,8 +45,8 @@ search = href='http://blockchain.info/block/([0-9a-f]+)
 mode = h
 
 [eligius]
-url = http://eligius.st/~artefact2/
-search = href='http://blockchain.info/block/([0-9a-f]+)
+url = http://blockchain.info/blocks/Eligius
+search = href="/block-index/[0-9]+/([0-9a-f]+)"
 mode = h
 
 [polmine]
@@ -81,8 +81,9 @@ search = href="http://blockexplorer.com/tx/([0-9a-f]+)"
 mode = g
 
 [ozco]
-url = http://ozco.in/content/previous-bitcoin-rounds
-search = href="http://blockexplorer.com/tx/">([0-9]+)"
+url = http://blockchain.info/blocks/OzCoin
+search = href="/block-index/[0-9]+/([0-9a-f]+)"
+mode = h
 
 [bloodys]
 url = http://pool.bloodys.com/?action=statistics
@@ -118,7 +119,7 @@ search = href="/block-index/[0-9]+/([0-9a-f]+)"
 mode = h
 
 [bitminter]
-url = http://blockchain.info/blocks/bitminter
+url = http://blockchain.info/blocks/BitMinter
 search = href="/block-index/[0-9]+/([0-9a-f]+)"
 mode = h
 
