--- a/pools.cfg
+++ b/pools.cfg
@@ -162,7 +162,7 @@ payout_merged_mining: true
 
 [bitcash]
 coin:btc
-name: bitcash.cz (Prop)
+name: Bitcash.cz (Prop)
 mine_address:bitcash.cz:8337
 api_address:http://bitcash.cz/pool/actual.php?s=
 api_method:re
