Added Max and EMC as (MergeM-DGM)

--- a/pools.cfg
+++ b/pools.cfg
@@ -204,7 +204,7 @@ payout_merged_mining: true
 
 [eclipsemc]
 coin:btc
-name: EclipseMC.com (DGM)
+name: EclipseMC.com (MergeM-DGM)
 mine_address: pacrim.eclipsemc.com:8337
 api_address: https://eclipsemc.com/api.php?key=%(eclipsemc_apikey)s&action=poolstats
 api_method: json_ec
@@ -515,7 +515,7 @@ payout_scheme: pplns
 
 [maxbtc]
 coin:btc
-name: MaxBTC (DGM)
+name: MaxBTC (MergeM-DGM)
 mine_address: pool.maxbtc.com:8332
 api_address: https://www.maxbtc.com/statistics/pool
 api_method: re
