Updated Ozco.in api keys

--- a/pools.cfg
+++ b/pools.cfg
@@ -38,9 +38,8 @@ name: OzCo.in (MergeM-DGM)
 mine_address: us.ozco.in:8332
 api_address: http://ozco.in/api.php
 api_method:json
-api_key: pool,round_shares
-api_key_mhashrate: pool,hashrate_raw
-api_key_duration_day_hour_min: (\d+)d (\d+)h (\d+)m
+api_key: round_shares
+api_key_mhashrate: hashrate
 url: http://ozco.in/blocks.php
 payout_scheme: dgm
 payout_merged_mining: true
