Updated Maxbtc api address, method, and keys.  Merged mining set to true

--- a/pools.cfg
+++ b/pools.cfg
@@ -516,13 +516,14 @@ payout_scheme: pplns
 coin:btc
 name: MaxBTC (MergeM-DGM)
 mine_address: pool.maxbtc.com:8332
-api_address: https://www.maxbtc.com/statistics/pool
-api_method: re
-api_key: Shares</td>\W+<td class="dots">&nbsp;</td>\W+<td>\W+([,0-9]+)
-api_key_mhashrate: <td>([,0-9.]+) MH/s
+api_address: https://www.maxbtc.com/api/poolstats?key=fjgccZcsC0_ipZRw6IVAP5wYXoV-_e3cV_HSWzrP9Mg9
+api_method: json
+api_key: poolstats,shares
+api_key_mhashrate: poolstats,hashrate
 api_key_duration_hour_min: (\d+):(\d+):
 url: https://www.maxbtc.com/account/home?sp=workers
 payout_scheme: dgm
+payout_merged_mining: true
 
 [bitminter]
 coin:btc
