--- a/pools.cfg
+++ b/pools.cfg
@@ -360,12 +360,12 @@ pass: bhdonate
 [squid]
 coin:scc
 name: SquidNet (SCC)
-mine_address: pool.squidnet.org:8341
-api_address: http://pool.squidnet.org/api
+mine_address: load.squidnet.org:12000
+api_address: http://pool.squidnet.org/
 api_method: json
 api_key: shares_this_round
 url: http://pool.squidnet.org
-payout_scheme: prop
+payout_scheme: pplns
 
 [asspenny]
 coin:btc
