--- a/pools.cfg
+++ b/pools.cfg
@@ -40,7 +40,7 @@ api_address: http://ozco.in/api.php
 api_method:json
 api_key: round_shares
 api_key_mhashrate: hashrate
-url: http://ozco.in/blocks.php
+url: http://ozco.in/content/previous-bitcoin-rounds
 payout_scheme: dgm
 payout_merged_mining: true
 
