--- a/pools.cfg
+++ b/pools.cfg
@@ -112,7 +112,7 @@ payout_merged_mining: true
 
 [bitclockers]
 coin:btc
-name: BitClockers.com (Prop)
+name: BitClockers.com (MergeM-Prop)
 mine_address: pool.bitclockers.com:8332
 api_address: http://bitclockers.com/api
 api_method: json
@@ -121,6 +121,7 @@ api_key_ghashrate: hashrate
 user_api_address: http://bitclockers.com/api/%(bitclockers_user_apikey)s
 url: http://bitclockers.com/dashboard
 payout_scheme: prop
+payout_merged_mining: true
 
 [bitparking]
 coin:btc
@@ -403,23 +404,6 @@ url: http://coinotron.com
 payout_scheme: score
 payout_c: 1
 
-[simplecoin]
-coin:btc
-name: Simplecoin.us (SMPPS, PPLNS)
-mine_address: pool.simplecoin.us:8337
-#api_address: http://simplecoin.us/api.php
-#api_method: json
-#api_key: btcp__current_shares
-#api_key_mhashrate: pool_hashrate
-api_address: http://simplecoin.us/stats.php?pool_id=3
-api_method: re
-api_key: Current BTC Round Shares</td><td>([,0-9]+)</td>
-api_key_ghashrate: Pool Hash Rate</td><td>([.0-9]+) Ghashes/s
-api_key_duration_hour_min: Time Since Last Block</td><td><span class="\w+">([0-9]+) Hours ([0-9]+) Minutes
-api_strip: ','
-url: http://simplecoin.us
-payout_scheme: SMPPS
-payout_merged_mining: true
 
 [mtrednmc]
 coin:nmc
