--- a/pools.cfg
+++ b/pools.cfg
@@ -112,7 +112,7 @@ payout_merged_mining: true
 
 [bitclockers]
 coin:btc
-name: BitClockers.com (MergeM-Prop)
+name: BitClockers.com (MergeM-PPS)
 mine_address: pool.bitclockers.com:8332
 api_address: http://bitclockers.com/api
 api_method: json
@@ -120,7 +120,7 @@ api_key: roundshares
 api_key_ghashrate: hashrate
 user_api_address: http://bitclockers.com/api/%(bitclockers_user_apikey)s
 url: http://bitclockers.com/dashboard
-payout_scheme: prop
+payout_scheme: pps
 payout_merged_mining: true
 
 [bitparking]
