--- a/pools.cfg
+++ b/pools.cfg
@@ -163,7 +163,7 @@ payout_scheme: prop
 
 [bclc]
 coin:btc
-name: Bitlc.net (Prop)
+name: Bitlc.net (PPLNS)
 mine_address: pool.bitlc.net:80    
 api_address: https://www.bitlc.net/stats.json
 api_method: re_rate
@@ -173,7 +173,7 @@ api_key: "hash_rate":([ 0-9]+).
 #api_key: valid_round_shares
 #api_key_hashrate: hash_rate
 url: https://www.bitlc.net
-payout_scheme: prop
+payout_scheme: pplns
 
 [btcg]
 coin:btc
