Updated BitcoinPool re_rateduration parameters and mine_address

--- a/pools.cfg
+++ b/pools.cfg
@@ -204,11 +204,11 @@ payout_scheme: dgm
 [bcpool]
 coin:btc
 name: BitcoinPool.com (Prop)
-mine_address: bitcoinpool.com:8334 
+mine_address: bitcoinpool.com:8332
 api_address: http://bitcoinpool.com/index.php?do=currentround
 api_method: re_rateduration
-api_key_ghashrate: Pool Speed: <d class=\"info\">([\.0-9]+) Gh/s
-api_key_duration_day_hour_min: <p class=\"title\">Round Duration: <d class=\"info\">(?:([0-9]+)d&nbsp;)?([0-9]+)h&nbsp;([0-9]+)m&nbsp;
+api_key_ghashrate: <font class=\"stats_info\">&nbsp;&nbsp;([\.0-9]+) Gh/s
+api_key_duration_day_hour_min: <font class=\"stats_info\">&nbsp;&nbsp;(?:([0-9]+)d&nbsp;)?([0-9]+)h&nbsp;([0-9]+)m&nbsp;
 #api_address: http://bitcoinpool.com/pooljson.php
 #api_method: json
 #api_key: round_shares
